# virtual-market-public

./: .env.example  .gitignore  AGENT.md  CONTRIBUTING.md  README.md  RESEARCH.md  pyproject.toml
.github/workflows/: ci.yml
research/: README.md  sources.example.json
scripts/: seed_portfolio.py  sync_daily.sh
tests/: conftest.py  test_cash_service.py  test_cli.py  test_cockpit_web.py  test_consult_analysis.py  test_data_quality.py  test_freshness_behavior.py  test_memo_service.py  test_migrations.py  test_onboarding_imports.py  test_overview_report.py  test_portfolio_valuation.py  test_price_sync.py  test_product_sanity.py  test_research_brief.py  test_research_schema.py  test_research_sec.py  test_research_store.py  test_research_wiki.py  test_theme_analysis.py  test_trade_service.py  test_watchlist_service.py
vmarket/: __init__.py  cli.py  config.py  db.py  errors.py  migrations.py
vmarket/cli/: __init__.py  cash.py  cockpit.py  common.py  consult.py  imports.py  portfolio.py  report.py  research.py  sync.py  theme.py  watch.py
vmarket/consult/: __init__.py  analysis.py  factsheets.py  models.py  profile.py  render.py  store.py
vmarket/dto/: instrument.py  portfolio.py  price_bar.py
vmarket/models/: __init__.py  cash_ledger.py  consultant_profile.py  fx.py  import_draft.py  instrument.py  job_run.py  portfolio.py  price.py  schema_migration.py  staged_action.py  trade.py  watchlist.py  workspace.py
vmarket/onboarding/: __init__.py  models.py  service.py
vmarket/providers/: alpha_vantage.py  base.py  stooq.py  yahoo_finance.py
vmarket/reports/: charts.py  daily_memo.py  io.py  overview.py  portfolio_snapshot.py
vmarket/repositories/: cash.py  consultant_profile.py  fx.py  (+9 more)
(+58 files in other folders)
