[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vmarket"
version = "0.1.0"
description = "Virtual Market — fake-money investing simulator using real daily prices"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "plotext>=5.2",
    "plotly>=5.0",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]

[project.scripts]
vmarket = "vmarket.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "ruff>=0.4",
    "httpx>=0.28",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
